# WasmCert-Coq

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  LICENSE.txt  Makefile  README.md  Wasm.opam  _CoqProject  changelog.md  coq-iris-wasm.opam  coq-wasm.opam  coq-wasm.opam.template  dune-project  esy.json  mkdoc.sh  package.json  run_wast.sh  wasm.v  wasm_coq.opam  wasm_coq_interpreter.opam  wasm_interpreter.opam
.ci/: import_test.v
.github/workflows/: build-deps-image.yml  main.yml  rocqnavi.yml
changelogs/: v2.0.1.md  v2.0.2.md  v2.0.3.md  v2.0.md  v2.1.0.md  v2.2.0.md  v2.2.1.md
compcert/: LICENSE.LGPL  NOTICE.md  dune
compcert/common/: Memdata.v
esy.lock/: index.json
esy.lock/overrides/opam__s__coq_opam__c__8.13.2_opam_override/: package.json
esy.lock/overrides/opam__s__dune_opam__c__2.5.1_opam_override/: package.json
esy.lock/overrides/opam__s__num_opam__c__1.3_opam_override/files/: num-1.3.patch
esy.lock/overrides/opam__s__zarith_opam__c__1.12_opam_override/: package.json
src/: Parray.ml  Parray.mli  SIMD_ops.ml  SIMD_ops.mli  Uint63.ml  Uint63.mli  convert.ml  convert.mli  dune  execute.ml  execute.mli  extract.patch  extract_newer.patch  extraction.v  extraction_instance.v  ocaml_host.ml  output.ml  output.mli  parse.ml  parse.mli  repl.ml  repl.mli  shim.ml  shim.mli  utils.ml  utils.mli  vector.ml  vector.mli  wasm_coq_interpreter.ml  wasm_interpreter.ml  wast_execute.ml  wast_execute.mli
src/Parray/: Coq_types.ml  Parray.ml  Parray.mli  Parray_shim.ml  Parray_shim.mli  Uint63.ml  Uint63.mli  dune
tests/: add.md  add.wasm  add.wat  add2.md  add2.wasm  add2.wat  add3_export.md  add3_export.wasm  add3_export.wat  add3_import.md  add3_import.wasm  add3_import.wat  big_const.md  big_const.wasm  big_const.wat  bigrec.md  bigrec.wasm  bigrec.wat  call.md  call.wasm  call.wat  const.md  const.wasm  const.wat  drop.md  drop.wasm  drop.wat  dune  exhaustion.md  exhaustion.wasm  exhaustion.wat  floatadd.md  floatadd.wasm  floatadd.wat  floatmul.md  floatmul.wasm  floatmul.wat  loop.md  loop.wasm  loop.wat  (+41 more)
tests/wast/: f32.wast
theories/: adequacy_test.v  ansi.v  array.v  binary.v  binary_format_parser.v  binary_format_pp.v  binary_format_printer.v  binary_format_spec.v  binary_format_tests.v  binary_parser.v  binary_parser_tests.v  binary_parser_types.v  binary_tests.v  bytes.v  bytes_pp.v  check_toks.v  common.v  context_inference.v  contexts.v  datatypes.v  datatypes_properties.v  definitions.v  dune  efficient.v  efficient_extraction.v  extraction.v  extraction_instance.v  floats.v  host.v  instantiation.v  instantiation_func.v  instantiation_itree.v  instantiation_properties.v  instantiation_sound.v  instantiation_spec.v  interp_instantiate_sound.v  interpreter.v  interpreter_ctx.v  interpreter_func.v  interpreter_func_sound.v  (+111 more)
theories/iris/: iris.v  iris_adequacy.v  iris_atomicity.v  iris_host.v  iris_instantiation.v  iris_lfilled_properties.v  iris_locations.v  iris_monotone.v  iris_properties.v  iris_reduce_properties.v  iris_reduction_core.v  iris_split_reduce.v  iris_use.v  iris_wasm_determ.v  iris_wasm_lang_properties.v  iris_wp_def.v  stdpp_aux.v  wasm_lang_properties.v
theories/iris/examples/: example_helper.v  iris_example_helper.v  iris_examples.v  iris_examples_factorial.v  iris_robust_example.v  iris_robust_example_adequacy.v  iris_robust_example_host.v  iris_robust_examples.v  iris_robust_examples_adequacy.v  stack.v  stack_client.v  stack_instantiation.v  stack_robust.v  stack_specs.v  stack_with_reentrancy.v
theories/iris/examples/stack/: stack_client.v  stack_common.v  stack_instantiation.v  stack_instantiation_interp.v  stack_module_robust.v  stack_robust.v  stack_with_reentrancy.v
theories/iris/helpers/: first_instr.v  iris_lfilled_properties.v  iris_prim_step_split.v  iris_properties.v  iris_reduce_det_prelude.v  iris_reduce_properties.v  iris_reduction_core.v  iris_split_reduce.v  iris_wasm_determ.v  iris_wasm_lang_properties.v  lfill_extension.v  lfill_prelude.v  lfilled_reduce.v
theories/iris/helpers/reduce_det/: reduce_det_binop.v  reduce_det_binop_none.v  reduce_det_block.v  reduce_det_cvtop.v  reduce_det_cvtop_convert.v  reduce_det_cvtop_convert_none.v  reduce_det_cvtop_reinterpret.v  reduce_det_invoke_native.v  reduce_det_label.v  reduce_det_local.v  reduce_det_loop.v  reduce_det_relop.v  reduce_det_return.v  reduce_det_select.v  reduce_det_testop.v  reduce_det_testop_i32.v  reduce_det_testop_i64.v  reduce_det_unop.v
theories/iris/host/: iris_host.v
theories/iris/instantiation/: instantiation_properties.v  iris_instantiation.v
theories/iris/language/: iris.v  iris_atomicity.v  iris_locations.v  iris_properties.v  iris_wp.v  iris_wp_def.v
theories/iris/logrel/: iris_fundamental.v  iris_fundamental_binop.v  iris_fundamental_block.v  iris_fundamental_br.v  iris_fundamental_br_if.v  iris_fundamental_br_table.v  iris_fundamental_call.v  iris_fundamental_call_indirect.v  iris_fundamental_composition.v  iris_fundamental_const.v  iris_fundamental_current_memory.v  iris_fundamental_cvtop.v  iris_fundamental_drop.v  iris_fundamental_get_global.v  iris_fundamental_get_local.v  iris_fundamental_grow_memory.v  iris_fundamental_helpers.v  iris_fundamental_host.v  iris_fundamental_if.v  iris_fundamental_load.v  iris_fundamental_local.v  iris_fundamental_loop.v  iris_fundamental_nil.v  iris_fundamental_nop.v  iris_fundamental_relop.v  iris_fundamental_return.v  iris_fundamental_select.v  iris_fundamental_set_global.v  iris_fundamental_set_local.v  iris_fundamental_store.v  iris_fundamental_stuck_host.v  iris_fundamental_tee_local.v  iris_fundamental_testop.v  iris_fundamental_trap.v  iris_fundamental_unop.v  iris_fundamental_unreachable.v  iris_fundamental_weakening.v  iris_interp_instance_alloc.v  iris_logrel.v
theories/iris/rules/: iris_rules.v  iris_rules_bind.v  iris_rules_calls.v  iris_rules_control.v  iris_rules_pure.v  iris_rules_resources.v  iris_rules_structural.v  iris_rules_structural_with_trap.v  iris_rules_trap.v  proofmode.v
utilities/: cpanfile  package.pl  test.pl  travis_hook.sh
(+10 files in other folders)
